# qd

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: api.py  episodes.py  main.py  media.py  upload.py
app/db/: database.py
app/models/: models.py
app/scripts/: migrate_transcribe_histories.py
app/services/: embedding.py  episode.py  search.py  storage.py  upload.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  episode.html  episodes.html  index.html  search.html  upload.html
app/transcriber/: transcriber.py
app/vectorstore/: qdrant.py
docs/: add-001.md  add-002.md  add-003.md  add-004.md  add-005.md  add-006-plan.md  add-006.md  add-007.md  add-008.md  init.md
migrations/: env.py
migrations/versions/: 0a25a7b941b3_add_transcribe_histories_table_and_.py  186994790ca0_add_ext_column_to_episodes_table.py  ebc1816be7ce_add_hash_column_to_episodes_table.py
